--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "docs:build": "vuepress build"
   },
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^1.0.0-alpha.0",
     "vuepress": "^0.14.8"
   }
 }
